@@ -1,9 +1,8 @@
 `hanning` <-
-function (x,n=7)
+    function (x, n=7)
 {
-  j=0:(n-1)
-  win=0.5*(1-cos(2*pi*j/(n-1)))
-  win=win/sum(win)
-  y=filter(x,win)
-  as.vector(y)
+    j <- 0:(n - 1)
+    win <- 1 - cos(2 * pi / (n - 1) * j)
+    win <- win / sum(win)
+    as.vector(filter(x, win))
 }
